# skill-mine

./: .editorconfig  .gitignore  CLAUDE.md  Cargo.toml  Makefile  README.md  rustfmt.toml
api/: Cargo.toml
api/src/: consts.rs  instruction.rs  lib.rs  sdk.rs
api/src/state/: miner.rs  mod.rs  round.rs
app/: Cargo.toml  Dioxus.toml  input.css
app/public/: tailwind.css
app/src/: main.rs  route.rs
app/src/components/: board.rs  layout.rs  mod.rs  skill_stats.rs  wallet_button.rs
app/src/hooks/: mod.rs  rpc.rs  use_board.rs  use_deploy.rs  use_leaderboard.rs  use_miner.rs
app/src/pages/: home.rs  leaderboard.rs  mod.rs  play.rs  stats.rs
cli/: Cargo.toml
cli/src/: main.rs
docs/: LEARNINGS.md  ROADMAP.md
program/: Cargo.toml
program/src/: automate.rs  bury.rs  buyback.rs  checkpoint.rs  claim_ore.rs  claim_sol.rs  claim_yield.rs  close.rs  deploy.rs  deposit.rs  initialize.rs  lib.rs  liq.rs  log.rs  migrate_automation.rs  new_var.rs  reload_sol.rs  reset.rs  reveal_choice.rs  set_admin.rs  set_admin_fee.rs  set_fee_collector.rs  set_swap_program.rs  set_var_address.rs  submit_commit.rs  submit_prediction.rs  withdraw.rs  wrap.rs
