[package]
name = "skill-app"
version = "0.1.0"
edition = "2021"
description = "SKILL Mining - Full-stack Dioxus application"

[workspace]
# This package is not part of the main workspace

[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]

[dependencies]
# Dioxus framework
dioxus = { version = "0.7", features = ["router"] }

# Async runtime
tokio = { version = "1", features = ["rt", "macros"] }
futures = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# HTTP client for RPC and Helius
reqwest = { version = "0.12", features = ["json"] }

# Solana types (web-compatible subset)
bs58 = "0.5"
base64 = "0.22"

# Web-specific
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "Window",
    "Document",
    "Storage",
    "console",
] }
gloo-timers = "0.3"
gloo-storage = "0.3"
js-sys = "0.3"

# Crypto
sha2 = "0.10"

# Logging
tracing = "0.1"
tracing-wasm = "0.2"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1", features = ["full"] }
